[gd_scene load_steps=2 format=2]

[ext_resource path="res://OreDetector/OreDetector.gd" type="Script" id=1]

[node name="OreDetector" type="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="TimerFuel" type="Timer" parent="."]

[node name="Lines" type="Node2D" parent="."]

[node name="MidLine" type="Line2D" parent="Lines"]
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="Lines"]
points = PoolVector2Array( 0, 0, 256, 0 )
default_color = Color( 0.0313726, 1, 0, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
